fix layout break after login on candidate site

--- a/skin/frontend/default/iconic/css/styles.css
+++ b/skin/frontend/default/iconic/css/styles.css
@@ -153,7 +153,7 @@ body.job-index-createcv #search-block{
 }
 #header-menu ul li.home{
 	float: left;
-	margin-right: 80px;
+	margin-right: 72px;
 }
 #header-menu ul li.home > a{
 	padding: 0;
